AzureNetworking/ARMTemplate/App-gw-V2-E2E-SSL.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "defaultValue": "[resourceGroup().location]",
      "type": "String",
      "metadata": {
        "description": "Location for all resources."
      }
    },
    "adminUsername": {
      "type": "String",
      "metadata": {
        "description": "Username for the Virtual Machine."
      }
    },
    "adminPassword": {
      "minLength": 12,
      "type": "SecureString",
      "metadata": {
        "description": "Password for the Virtual Machine."
      }
    },
    "YourPublicIP": {
      "defaultValue": "1.1.1.1/32",
      "type": "String",
      "metadata": {
        "description": "The Public ip that will be used to connect to the VM"
      }
    }
  },
  "variables": {
    "VnetName": "ApplicationGW-vnet",
    "VMSubnetName": "VM-Subnet",
    "AGWSubnetName": "AppGwV2-Subnet",
    "VnetAddressSpace": "10.1.0.0/16",
    "VMSubnetAddressSpace": "10.1.1.0/24",
    "AGWSubnetAddressSpace": "10.1.0.0/24",
    "BackendNSG": "VM-Subnet-NSG",
    "AppGWNSG": "APPGW-Subnet-NSG",
    "VMName": "BackendVM1",
    "VMNIC": "[concat(variables('VMName'), '-NIC')]",
    "VMPIP": "[concat(variables('VMName'), '-PIP')]",
    "applicationGateWayName": "APPGWv2-HTTPS",
    "AppGWPIP": "[concat(variables('applicationGateWayName'), '-PIP')]",
    "ClientName": "ClientVM1",
    "ClientNIC": "[concat(variables('ClientName'), '-NIC')]",
    "ClientPIP": "[concat(variables('ClientName'), '-PIP')]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2022-07-01",
      "name": "[variables('BackendNSG')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowRDP",
            "properties": {
              "priority": "101",
              "protocol": "TCP",
              "sourceAddressPrefix": "[parameters('YourPublicIP')]",
              "destinationAddressPrefix": "[variables('VMSubnetAddressSpace')]",
              "destinationPortRange": "3389",
              "sourcePortRange": "*",
              "access": "Allow",
              "direction": "Inbound"
            }
          },
          {
            "name": "default-allow-443",
            "properties": {
              "priority": 1001,
              "access": "Allow",
              "direction": "Inbound",
              "destinationPortRange": "443",
              "protocol": "Tcp",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2022-07-01",
      "name": "[variables('AppGWNSG')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHTTPS",
            "properties": {
              "priority": "101",
              "protocol": "TCP",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "[variables('AGWSubnetAddressSpace')]",
              "destinationPortRange": "443",
              "sourcePortRange": "*",
              "access": "Allow",
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowGWMgr",
            "properties": {
              "priority": "102",
              "protocol": "TCP",
              "sourceAddressPrefix": "GatewayManager",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "65200-65535",
              "sourcePortRange": "*",
              "access": "Allow",
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2021-02-01",
      "name": "[variables('VMPIP')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2021-02-01",
      "name": "[variables('ClientPIP')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2021-02-01",
      "name": "[variables('VnetName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('BackendNSG'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('AppGWNSG'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('VnetAddressSpace')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('AGWSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('AGWSubnetAddressSpace')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('AppGWNSG'))]"
              }
            }
          },
          {
            "name": "[variables('VMSubnetName')]",
            "properties": {
              "addressPrefix": "[variables('VMSubnetAddressSpace')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('BackendNSG'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2022-07-01",
      "name": "[variables('VMNIC')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('VnetName'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('VMPIP'))]",
        "[resourceId('Microsoft.Network/applicationGateways', variables('applicationGateWayName'))]"
      ],
      "properties": {
        "enableAcceleratedNetworking": "True",
        "ipConfigurations": [
          {
            "name": "Ipconfig1",
            "properties": {
              "primary": "True",
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "10.1.1.4",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('VMPIP'))]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('VMSubnetName'))]"
              },
              "applicationGatewayBackendAddressPools": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationGateways/backendAddressPools', variables('applicationGateWayName'), 'myBackendPool')]"
                }
              ]
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-03-01",
      "name": "[variables('VMName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('VMNIC'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2s_v5"
        },
        "osProfile": {
          "computerName": "[variables('VMName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2022-datacenter",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "StandardSSD_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('VMNIC'))]"
            }
          ]
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2021-04-01",
      "name": "[concat(variables('VMName'),'/', 'InstallWebServer')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/',variables('VMName'))]"
      ],
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "CustomScriptExtension",
        "typeHandlerVersion": "1.7",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "https://supportability.visualstudio.com/AzureNetworking/_git/AzureNetworking?path=/.LabBoxRepo/Layer7/AppGW-E2E-HTTPS_Script.ps1"
          ],
          "commandToExecute": "powershell.exe -ExecutionPolicy Unrestricted -File AppGW-E2E-HTTPS_Script.ps1"
        }
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2021-02-01",
      "name": "[variables('AppGWPIP')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/ApplicationGateways",
      "apiVersion": "2021-05-01",
      "name": "[variables('applicationGateWayName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('AppGWPIP'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('VnetName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('AppGWNSG'))]"
      ],
      "properties": {
        "sku": {
          "name": "Standard_v2",
          "tier": "Standard_v2"
        },
        "sslCertificates": [
          {
            "name": "Cert1",
            "properties": {
              "data": "MIIVrAIBAzCCFWgGCSqGSIb3DQEHAaCCFVkEghVVMIIVUTCCBjoGCSqGSIb3DQEHAaCCBisEggYnMIIGIzCCBh8GCyqGSIb3DQEMCgECoIIE/jCCBPowHAYKKoZIhvcNAQwBAzAOBAgEjwXUe7/D2gICB9AEggTYNQ7pkxzOozx81UuKt4sJBXdwJD46GA1taYmqMq/uqJDG1TCVdypryJx/7tx5Wxzbdn6Qc7nYF0UWCt/5hqke8H//koaVlIvvhmBgTZxJRTLej/ZbxsBLBbEIJBSZ9kOmoyx2lGadUC59u9DvZI43ehMDGhJBFhvRqPY5AvneA0yRvmFBo6cKYwfqOATFqkpJIAqi57AnovmwrniAAiNN8NPD5U5pfw+te2uMVYBZIrkvKK6OhTaH75QDh6gD/e9+t2SSyHotngEbLzJ7DyvijaVXMadrqSyIhaky7VP9huzwXkq+zNU3Ahcb0P3FW [...]
              "password": "Password1"
            }
          }
        ],
        "gatewayIPConfigurations": [
          {
            "name": "appGatewayIpConfig",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('AGWSubnetName'))]"
              }
            }
          }
        ],
        "frontendIPConfigurations": [
          {
            "name": "appGwPublicFrontendIp",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('AppGWPIP'))]"
              }
            }
          }
        ],
        "frontendPorts": [
          {
            "name": "port_443",
            "properties": {
              "port": 443
            }
          }
        ],
        "trustedRootCertificates": [
          {
            "name": "FabrikamRootCA",
            "properties": {
              "data": "MIIDYTCCAkmgAwIBAgIQORLc0wVsG49D5EjzMbZVoDANBgkqhkiG9w0BAQsFADBDMRMwEQYKCZImiZPyLGQBGRYDY29tMRgwFgYKCZImiZPyLGQBGRYIZmFicmlrYW0xEjAQBgNVBAMTCVJvb3RjYS1DQTAeFw0yMzAyMDYwNTEwNTFaFw00MzAyMDYwNTIwNDlaMEMxEzARBgoJkiaJk/IsZAEZFgNjb20xGDAWBgoJkiaJk/IsZAEZFghmYWJyaWthbTESMBAGA1UEAxMJUm9vdGNhLUNBMIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEArGhYq8xqS2lN0Ed3GHNEX6JqO7txX9tFDe07tc5ZnxeIAC7577TO0Y+0IpWLaRcYRnHDKOMrrfsggWcRjjVZS9V1V2xQTM+ovgeoZyBaJAuNGigo2044YSH1IowN3XPgAr7qUo6XYSIBQvOXd [...]
            }
          }
        ],
        "backendAddressPools": [
          {
            "name": "myBackendPool",
            "properties": {}
          }
        ],
        "backendHttpSettingsCollection": [
          {
            "name": "myHTTPSSetting",
            "properties": {
              "port": 443,
              "protocol": "Https",
              "cookieBasedAffinity": "Disabled",
              "pickHostNameFromBackendAddress": false,
              "requestTimeout": 20,
              "hostName": "https.internal.fabrikam.com",
              "trustedRootCertificates": [
                {
                  "id": "[resourceId('Microsoft.Network/applicationGateways/trustedRootCertificates', variables('applicationGateWayName'), 'FabrikamRootCA')]"
                }
              ]
            }
          }
        ],
        "httpListeners": [
          {
            "name": "myListener_443",
            "properties": {
              "frontendIPConfiguration": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/frontendIPConfigurations', variables('applicationGateWayName'), 'appGwPublicFrontendIp')]"
              },
              "frontendPort": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/frontendPorts', variables('applicationGateWayName'), 'port_443')]"
              },
              "protocol": "Https",
              "sslCertificate": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/sslCertificates', variables('applicationGateWayName'), 'Cert1')]"
              },
              "requireServerNameIndication": false
            }
          }
        ],
        "requestRoutingRules": [
          {
            "name": "myRoutingRule",
            "properties": {
              "ruleType": "Basic",
              "httpListener": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/httpListeners', variables('applicationGateWayName'), 'myListener_443')]"
              },
              "backendAddressPool": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/backendAddressPools', variables('applicationGateWayName'), 'myBackendPool')]"
              },
              "backendHttpSettings": {
                "id": "[resourceId('Microsoft.Network/applicationGateways/backendHttpSettingsCollection', variables('applicationGateWayName'), 'myHTTPSSetting')]"
              }
            }
          }
        ],
        "enableHttp2": false,
        "autoscaleConfiguration": {
          "minCapacity": 0,
          "maxCapacity": 10
        }
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2022-07-01",
      "name": "[variables('ClientNIC')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('VnetName'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('ClientPIP'))]"
      ],
      "properties": {
        "enableAcceleratedNetworking": "True",
        "ipConfigurations": [
          {
            "name": "Ipconfig1",
            "properties": {
              "primary": "True",
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "10.1.1.5",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('ClientPIP'))]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('VnetName'), variables('VMSubnetName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-03-01",
      "name": "[variables('ClientName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('ClientNIC'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2s_v5"
        },
        "osProfile": {
          "computerName": "[variables('ClientName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2022-datacenter",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "StandardSSD_LRS"
            }
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('ClientNIC'))]"
            }
          ]
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2021-04-01",
      "name": "[concat(variables('ClientName'),'/', 'InstallWebServer')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/',variables('ClientName'))]"
      ],
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "CustomScriptExtension",
        "typeHandlerVersion": "1.7",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "https://supportability.visualstudio.com/AzureNetworking/_git/AzureNetworking?path=/.LabBoxRepo/Layer7/AppGW-E2E-HTTPS_Script.ps1"
          ],
          "commandToExecute": "powershell.exe -ExecutionPolicy Unrestricted -File AppGW-E2E-HTTPS_Script.ps1"
        }
      }
    }
  ]
}
